2006-08-20  Jb Evain  <jbevain@gmail.com>

	* clean events as well

2006-08-17  Jb Evain  <jbevain@gmail.com>

	* provide a Makefile

2006-08-16  Jb Evain  <jbevain@gmail.com>

	* work on generics assemblies linking

	* use the resolver from Cecil.

	* when marking a type, also mark its virtual methods

2006-08-15  Jb Evain  <jbevain@gmail.com>

	* clean properties

	* mark interfaces as well

	* work in progress + unit tests.

2006-07-27  Jb Evain  <jbevain@gmail.com>

	* begin work on the sweep step.

2006-07-20  Jb Evain  <jbevain@gmail.com>

	* very first commit.
	  draft implementation of the mark phase of the linker.