@@ -19,7 +19,7 @@
      is present. As supplied, this section is commented out, which
      causes nunit-console to use the version of the framework with
      which it was built.
-  	
+
 	 Since .NET 1.0 does not recognize the <supportedRuntime> elements,
 	 a <requiredRuntime> element is used in case it is the only version
 	 of the framework that is installed.
