@@ -1,5 +1,7 @@
 2006-08-20  Jb Evain  <jbevain@gmail.com>
 
+	* clean also nested types in a proper way.
+
 	* clean events as well
 
 2006-08-17  Jb Evain  <jbevain@gmail.com>
